--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@ __pycache__/
 
 # C extensions
 *.so
+# Ignore HTML files
+*.html linguist-documentation
+
+# Alternatively, ignore an entire folder (e.g., HTML files in `html_files/`)
+html_files/* linguist-documentation
 
 # Distribution / packaging
 .Python
